# klong

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  get-deps.sh
examples/: 8queens.kg  absolute_import.kg  bug19.kg  cast.kg  import.kg  main.kg  module1.kg  module2.kg  relative_import.kg  simple.kg  structs.kg  submodule.kg  subscript.kg  to_import.kg  voidptr.kg
examples/imports/: vec2.kg  vec3.kg
src/: array.h  compiler.cpp  compiler.h  main.cpp
src/ast/: expr.h  module.h  stmt.h  string_helper.cpp  string_helper.h  type.cpp  type.h  visitor.h
src/codegen/: LLVMEmitter.cpp  LLVMEmitter.h  llvm_emit_visitor.cpp  llvm_emit_visitor.h  llvm_emitter.cpp  llvm_emitter.h
src/codegen/c/: c_emit_visitor.cpp  c_emit_visitor.h  c_emitter.cpp  c_emitter.h
src/codegen/llvm/: llvm_debug_scope_manager.cpp  llvm_debug_scope_manager.h  llvm_debug_type_emit_visitor.cpp  llvm_debug_type_emit_visitor.h  llvm_emit_visitor.cpp  llvm_emit_visitor.h  llvm_emitter.cpp  llvm_emitter.h  llvm_klong_jit.h  llvm_type_emit_visitor.cpp  llvm_type_emit_visitor.h
src/common/: compilation_error.h  compilation_incident.h  compilation_result.cpp  compilation_result.h  compilation_session.cpp  compilation_session.h  compilation_warning.h  defer.h  getopt.c  getopt.h  option.cpp  option.h  result.h  source_file.h  source_location.cpp  source_location.h  source_range.cpp  source_range.h  symbol_info.h
src/graphviz/: dotfile_emitter.cpp  dotfile_emitter.h  dotfile_visitor.cpp  dotfile_visitor.h
src/lexer/: ilexer.h  lexer.cpp  lexer.h  lexer_memento.h  token.h
src/linker/: linker.cpp  linker.h  microsoft_craziness.h
src/parser/: expr.h  iparser.h  module.h  parser.cpp  parser.h  parser_memento.h  resolver.cpp  resolver.h  stmt.h  type.h  type_checker.cpp  type_checker.h  visitor.h
src/resolver/: resolve_visitor.cpp  resolve_visitor.h  resolver.cpp  resolver.h
src/terp/: environment.cpp  environment.h  klong_function.h  terp_exception.h  treewalk_terp.cpp  treewalk_terp.h
src/typechecker/: type_check_visitor.cpp  type_check_visitor.h  typechecker.cpp  typechecker.h
test/: add.kg  and.kg  array.kg  asr.kg  assignment_to_ptr_expr.kg  bug19.kg  bug20.kg  callAndSubscript.kg  cast.kg  comments.kg  compare_f64_and_i64.kg  complex_struct.kg  complex_union.kg  defer.kg  div.kg  divf.kg  enum.kg  eq.kg  extern.kg  for.kg  for_break.kg  for_continue.kg  func_call.kg  heap.kg  lsl.kg  lsr.kg  mod.kg  mul.kg  neq.kg  nested_comments.kg  nested_for_break.kg  nested_for_continue.kg  or.kg  ptr.kg  ptr_arithmetic.kg  run.py  sizeof.kg  string.kg  struct.kg  structArray.kg  (+8 more)
